--- a/Java_OneDay_ShopingCart/.classpath
+++ b/Java_OneDay_ShopingCart/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/KMS505225/Downloads/devTools/mybatis-3.5.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/KMS505225/Downloads/devTools/ojdbc8-23.2.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
